--- a/assets/scss/sections/main/_comment.scss
+++ b/assets/scss/sections/main/_comment.scss
@@ -6,7 +6,7 @@
   min-height: 470px;
   padding-top: 50px;
 
-  &-container {
+  &__container {
     display: flex;
     column-gap: 45px;
     padding-bottom: 100px;
