--- a/assets/scss/sections/main/_productivity.scss
+++ b/assets/scss/sections/main/_productivity.scss
@@ -7,58 +7,88 @@
     padding-top: 50px;
   }
 
-  &-content {
+  &__content {
     display: grid;
     justify-items: center;
     align-items: baseline;
-    gap: 30px;
+   
 
     @include xl-min {
       grid-template-columns: 1fr 1fr 1fr;
       padding-top: 20px;
-    }
-
-    @include xl {
       gap: $gap * 2;
     }
 
-    @include lg {
+    @include xl {
+  gap: 15px;
+    }
+
+    @include sm {
       grid-template-columns: 1fr;
+    }
+
+    &-item {
+      display: flex;
+      gap: $gap-lg;
+      flex-direction: column;
+      text-align: left;
+      flex-wrap: wrap;
+      max-width: 410px;
+      font-size: 20px;
+      padding-bottom: 190px;
+    
+      @include xl {
+        padding-bottom: 50px;
+      }
+
+      @include xl {
+        text-align: center;
+      }
+       
+    
+     }
+
+   
+  }
+  &-item {
+    display: flex;
+    gap: $gap-lg;
+    flex-direction: column;
+    text-align: left;
+    flex-wrap: wrap;
+    max-width: 410px;
+    font-size: 20px;
+    padding-bottom: 190px;
+
+    
+  
+    @include xl {
+      padding-bottom: 50px;
+    }
+
+
+    &__title {
+      margin: 0;
+    }
+  
+    &__description {
+      margin: 0;
+      text-align: left;
+      line-height: 30px;
+  
+      @include xl-min {
+        font-size: 20px;
+      }
+
+      @include xl {
+        text-align: center;
+      }
+    }
+  
+    &__picture {
+      order: -1;
+      margin-top: 15px;
     }
   }
 }
 
-.productivity-item {
-  display: flex;
-  gap: $gap-lg;
-  flex-direction: column;
-  text-align: center;
-  flex-wrap: wrap;
-  max-width: 410px;
-  font-size: 20px;
-  padding-bottom: 190px;
-
-  @include xl {
-    padding-bottom: 50px;
-  }
-  &__title {
-    margin: 0;
-  }
-
-  &__description {
-    margin: 0;
-
-    @include xl {
-      font-size: 20px;
-    }
-  }
-
-  &__picture {
-    order: -1;
-    margin-top: 15px;
-  }
-
-//   &__link {
-//     border-bottom: solid 1px #000000;
-//   }
- }
