--- a/assets/scss/sections/header/_header-content.scss
+++ b/assets/scss/sections/header/_header-content.scss
@@ -1,5 +1,5 @@
 @use "../../presets" as *;
-@use "../../mixins/" as *;
+@use "../../mixins" as *;
 
 .header-content {
   display: grid;
@@ -18,10 +18,16 @@
   @include lg {
     grid-template-areas: "ttl" "dsc" "img" "act" "nts";
     grid-template-columns: 1fr;
+    padding-top: 140px;
   }
+  @include md {
+    padding-top: 140px;
+    padding-bottom: 100px;
+  }
+
   @include sm {
-    padding-top: 160px;
-    padding-bottom: 160px;
+    padding-top: 60px;
+    padding-bottom: 60px;
   }
   row-gap: $gap;
 
@@ -29,6 +35,7 @@
     margin: 0;
     grid-area: ttl;
   }
+
   &__description {
     margin-bottom: $gap;
 
