--- a/assets/scss/sections/main/_integrate.scss
+++ b/assets/scss/sections/main/_integrate.scss
@@ -7,8 +7,10 @@
   @include md {
     padding-bottom: 100px;
   }
+&__content {
 
-  &__title {
+
+  &-title {
     font-size: 65px;
     line-height: 75px;
     font-weight: 600;
@@ -23,7 +25,7 @@
     }
   }
 
-  &__description {
+  &-description {
     font-size: 25px;
     line-height: 30px;
     text-align: center;
@@ -33,12 +35,12 @@
     }
   }
 
-  &__image {
+  &-image {
     width: 100%;
     padding: 25px 0 25px;
   }
 
-  &__action {
+  &-action {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -50,7 +52,7 @@
     }
   }
 
-  &__button {
+  &-button {
     min-width: 100px;
     border: none;
     padding-left: 20px;
@@ -66,4 +68,5 @@
       
     }
   }
+}
 }
