--- a/assets/scss/sections/main/_rating.scss
+++ b/assets/scss/sections/main/_rating.scss
@@ -6,13 +6,15 @@
   padding-bottom: 90px;
   background-color: $color-bg-neutral;
 
-  &-container {
+  &__container {
     display: flex;
     gap: $gap;
 
     @include xl {
       flex-direction: column;
     }
+
+
   }
 
   &-header {
@@ -24,7 +26,7 @@
       gap: 70px;
       justify-content: center;
       align-items: center;
-      border-bottom: 1px solid;
+
     }
 
     &__title {
