--- a/assets/scss/sections/main/_trial.scss
+++ b/assets/scss/sections/main/_trial.scss
@@ -7,50 +7,54 @@
   padding-bottom: 80px;
   margin: 0;
 
-  &__title {
-    @include xl-min {
-      padding-right: 250px;
-      padding-left: 250px;
-      font-size: 65px;
-      margin: 0;
-    }
-  }
 
-  &-content {
+
+  &__content {
     text-align: center;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: $gap * 1.5;
-  }
 
-  &__description {
-    font-size: 20px;
-    line-height: 1.5;
-    text-align: center;
-    margin-top: 0;
-
-    @include md {
-      padding-bottom: 25px;
+    &-title {
+      @include xl-min {
+        padding-right: 250px;
+        padding-left: 250px;
+        font-size: 65px;
+        margin: 0;
+      }
     }
-  }
 
-  &__button {
-    font-weight: 600;
-    font-size: 17px;
-    line-height: 60px;
-    padding-top: 0;
-    padding-bottom: 0;
-    padding-left: 40px;
-    padding-right: 40px;
-
-    
-    @include md {
-      line-height: 50px;
-      padding-left: 10px;
-      padding-right: 10px;
+    &-description {
+      font-size: 20px;
+      line-height: 1.5;
+      text-align: center;
+      margin-top: 0;
+  
+      @include md {
+        padding-bottom: 25px;
+      }
+    }
+  
+    &-button {
+      font-weight: 600;
+      font-size: 17px;
+      line-height: 60px;
+      padding-top: 0;
+      padding-bottom: 0;
+      padding-left: 40px;
+      padding-right: 40px;
+  
       
+      @include md {
+        line-height: 50px;
+        padding-left: 10px;
+        padding-right: 10px;
+        
+      }
     }
   }
+
+
 }
